# gdlex-anonimizzatore

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: release-on-tag.yml  tests.yml
docs/: BUILD.md  RELEASE.md  TROUBLESHOOTING.md  USO.md
src/gdlex_anonimizzatore/: main.py
src/gdlex_anonimizzatore/core/: anonymize.py  docx_processor.py  models.py  recognizers.py  report.py  reporting.py  session_store.py
src/gdlex_anonimizzatore/ui/: main_window.py  state_helpers.py
tests/: test_anonymize.py  test_core_session_mapping.py  test_docx_mvp.py  test_persona_recognizer.py  test_recognizers.py  test_report.py  test_reporting_summary.py  test_session_store.py  test_ui_reset.py  test_version_consistency.py
