[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdlex-anonimizzatore"
version = "0.1.0"
description = "Privacy-first desktop anonymization tool for legal documents"
authors = [{ name = "GDLEX" }]
requires-python = ">=3.10"

dependencies = [
    "PySide6>=6.6",
]

[project.scripts]
gdlex-anonimizzatore = "gdlex_anonimizzatore.main:main"
