[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdlex-anonimizzatore"
version = "0.4.1"
description = "Privacy-first desktop anonymization tool for legal documents"
authors = [{ name = "GD LEX" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "PySide6>=6.6",
    "python-docx>=1.1",
]

[project.scripts]
gdlex-anonimizzatore = "gdlex_anonimizzatore.main:main"


[project.optional-dependencies]
dev = [
    "pytest>=8",
]


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
